# cds

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cdsConfig.cmake.in
include/cds/: def.h  type.h  vec.h
src/: vec.c
tests/: CMakeLists.txt  test_vec.c
